@@ -1,3 +1,6 @@
+Changelog 0.3.24 [20230213]:
+- Fixed a few small bugs
+
 Changelog 0.3.23 [20230212]:
 - Added Special Setting "Filter Subs and Dubs"
 
